@@ -166,6 +166,9 @@ Release 2.8.0 - UNRELEASED
 
     HADOOP-12878. KMS SPNEGO sequence does not work with WEBHDFS. (xyao)
 
+    HADOOP-12846. Credential Provider Recursive Dependencies.
+    (Larry McCay via cnauroth)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
